--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,13 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="789dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="1dp"
             android:background="@drawable/homepage_item"
             android:orientation="vertical"
-            android:padding="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -28,9 +30,45 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <CheckBox
+                    android:id="@+id/petrolflag"
+                    android:layout_width="198dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/molengo"
+                    android:gravity="center_vertical"
+                    android:includeFontPadding="false"
+                    android:letterSpacing="0.2"
+                    android:text="Petrol"
+                    android:textAllCaps="true"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp" />
+
+                <CheckBox
+                    android:id="@+id/deiselflag"
+                    android:layout_width="188dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/molengo"
+                    android:letterSpacing="0.2"
+                    android:text="Deisel"
+                    android:textAlignment="textStart"
+                    android:textAllCaps="true"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/quantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
                 android:fontFamily="@font/molengo"
                 android:letterSpacing="0.2"
                 android:text="@string/quanity"
@@ -39,14 +77,15 @@
                 android:textSize="16sp" />
 
             <LinearLayout
-                android:layout_width="350dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_margin="10dp"
                 android:orientation="horizontal"
                 android:weightSum="3">
 
+
                 <Button
-                    android:id="@+id/add_one"
+                    android:id="@+id/minus"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="0dp"
@@ -57,10 +96,10 @@
                     android:fontFamily="@font/noto_sans_bold"
                     android:letterSpacing="0.2"
                     android:padding="16dp"
-                    android:text="+1"
+                    android:text="-"
                     android:textSize="16sp" />
 
-                <Button
+                <TextView
                     android:id="@+id/add_two"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -72,11 +111,12 @@
                     android:fontFamily="@font/noto_sans_bold"
                     android:letterSpacing="0.2"
                     android:padding="16dp"
-                    android:text="+2"
+                    android:text="Tanks"
+                    android:textColor="@color/white"
                     android:textSize="16sp" />
 
                 <Button
-                    android:id="@+id/add_three"
+                    android:id="@+id/add"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -87,14 +127,13 @@
                     android:fontFamily="@font/noto_sans_bold"
                     android:letterSpacing="0.2"
                     android:padding="16dp"
-                    android:text="+3"
+                    android:text="+"
                     android:textSize="16sp" />
             </LinearLayout>
-
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:textColorHint="@color/white"
                 app:boxStrokeColor="@color/white">
@@ -109,13 +148,14 @@
                     android:letterSpacing="0.2"
                     android:textColor="@color/white"
                     android:textSize="16sp" />
+
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/btn_place_order"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_width="337dp"
+                android:layout_height="164dp"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:backgroundTint="#6B9F54FF"
                 android:fontFamily="@font/noto_sans_bold"
@@ -123,8 +163,8 @@
                 android:padding="16dp"
                 android:text="@string/btn_place_order"
                 android:textSize="16sp" />
-        </LinearLayout>
 
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 <!--Navigation drawer layout-->
