--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="789dp"
+            android:layout_height="match_parent"
             android:layout_marginStart="1dp"
             android:layout_marginTop="50dp"
             android:layout_marginEnd="1dp"
@@ -100,7 +100,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/add_two"
+                    android:id="@+id/tanks"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
