--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -17,7 +17,7 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginStart="1dp"
             android:layout_marginTop="180dp"
             android:layout_marginEnd="1dp"
@@ -35,7 +35,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_weight="2">
 
                 <CheckBox
                     android:id="@+id/petrolflag"
@@ -71,8 +72,7 @@
                 android:text="@string/quanity"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
-                android:textSize="16sp"
-                tools:targetApi="lollipop" />
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -94,9 +94,8 @@
                     android:fontFamily="@font/noto_sans_bold"
                     android:letterSpacing="0.2"
                     android:padding="16dp"
-                    android:text="@string/minus"
-                    android:textSize="16sp"
-                    tools:targetApi="lollipop" />
+                    android:text="-"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/tanks"
@@ -110,10 +109,9 @@
                     android:fontFamily="@font/noto_sans_bold"
                     android:letterSpacing="0.2"
                     android:padding="16dp"
-                    android:text="@string/tanks"
+                    android:text="Tanks"
                     android:textColor="@color/white"
-                    android:textSize="16sp"
-                    tools:targetApi="lollipop" />
+                    android:textSize="16sp" />
 
                 <Button
                     android:id="@+id/add"
@@ -127,9 +125,8 @@
                     android:fontFamily="@font/noto_sans_bold"
                     android:letterSpacing="0.2"
                     android:padding="16dp"
-                    android:text="@string/add"
-                    android:textSize="16sp"
-                    tools:targetApi="lollipop" />
+                    android:text="+"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -146,12 +143,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/molengo"
-                    android:hint="@string/address_line_1"
+                    android:hint="Address Line 1"
                     android:inputType="text"
                     android:letterSpacing="0.2"
                     android:textColor="@color/white"
-                    android:textSize="16sp"
-                    tools:targetApi="lollipop" />
+                    android:textSize="16sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -169,12 +165,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/molengo"
-                    android:hint="@string/address_line_2"
+                    android:hint="Address Line 2"
                     android:inputType="text"
                     android:letterSpacing="0.2"
                     android:textColor="@color/white"
-                    android:textSize="16sp"
-                    tools:targetApi="lollipop" />
+                    android:textSize="16sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -187,9 +182,8 @@
                 android:fontFamily="@font/noto_sans_bold"
                 android:letterSpacing="0.2"
                 android:padding="16dp"
-                android:text="@string/open_in_maps"
-                android:textSize="16sp"
-                tools:targetApi="lollipop" />
+                android:text="Open in Maps"
+                android:textSize="16sp" />
 
             <Button
                 android:id="@+id/btn_place_order"
@@ -201,8 +195,7 @@
                 android:letterSpacing="0.2"
                 android:padding="16dp"
                 android:text="@string/btn_place_order"
-                android:textSize="16sp"
-                tools:targetApi="lollipop" />
+                android:textSize="16sp" />
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
